a11y atspi: Take dialog into account as top-level window

Since a dialog is also a top-level window, it should be taken
into account when trying to find the accessible's top-level
window, relative to which the position will be calulated for
`ATSPI_COORD_TYPE_WINDOW`.

Fixes: QTBUG-105042
Change-Id: I74fae096fd886bab04187c122f268c26c91b86ab
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 49c966bc8561d1ca71a97b83ae40852233630eb9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>